# aoc

./: .gitignore  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  09r.py  10.py  11.py  12.py  13.py
2016/: 01.py  01_complex.py
2019/: 02.py  05.py  07.py  09.py  11.py  13.py  15.py  17.py
2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
2024/: 01.py  02.py  03.py  04.py  05.py  06.py  06_2.py  07.py  08.py  09.py  09_2.py  09_linkedlist.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py  util.py
2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py
c/: CMakeLists.txt  util.c  util.h
c/2024/: 01.c  02.c  03.c  04.c  05.c  06.c  07.c  08.c  09.c
kotlin/: .gitignore  pom.xml
kotlin/src/main/java/util/: Util.java
kotlin/src/main/java/y2016/: D02.java  D04.java  D05.java  D06.java  D08.java  D09.java
kotlin/src/main/kotlin/: Util.kt
kotlin/src/main/kotlin/y2015/: 01.kt  02.kt  03_v1.kt  03_v2.kt  04.kt  05.kt  06_v1.kt  06_v2.kt  07_v1.kt  07_v2.kt  07d.kt  08.kt  09.kt  09_v2.kt  10.kt  11.kt  12.kt  13.kt  14.kt  15.kt  16.kt  17.kt  18_v1.kt  18_v2.kt  18_v3.kt  19.kt  20.kt  21.kt  22.kt  23.kt  24.kt  25.kt
kotlin/src/main/kotlin/y2016/: 02.kt  05.kt  08.kt
rust/: Cargo.toml
rust/src/: main.rs
rust/src/y2023/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs
