cmake_minimum_required(VERSION 3.22)
project(aoc C CXX)

set(CMAKE_C_STANDARD 17)
set(CMAKE_CXX_STANDARD 17)

add_executable(aoc_2024_01 2024/01.c util.c)
add_executable(aoc_2024_02 2024/02.c util.c)
add_executable(aoc_2024_03 2024/03.c util.c)
add_executable(aoc_2024_04 2024/04.c util.c)
add_executable(aoc_2024_05 2024/05.c util.c)
add_executable(aoc_2024_06 2024/06.c util.c)
add_executable(aoc_2024_07 2024/07.c util.c)
